--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.19",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "apollo-boost": "^0.4.9",
+    "apollo-upload-client": "^16.0.0",
+    "bootstrap": "^4.6.0",
+    "caniuse-lite": "^1.0.30001228",
+    "graphql": "^15.5.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
+    "react-bootstrap": "^1.6.0",
+    "react-butterfiles": "^1.3.3",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
