--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "apollo-upload-client": "^16.0.0",
     "bootstrap": "^4.6.0",
     "caniuse-lite": "^1.0.30001228",
+    "cloudinary": "^1.26.1",
+    "cloudinary-react": "^1.7.0",
+    "dotenv": "^10.0.0",
+    "flutterwave-react-v3": "^1.0.10",
     "graphql": "^15.5.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
